Change details screen layout.

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
@@ -17,6 +20,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "10.0.0"
 }
 
 task clean(type: Delete) {
