--- a/.github/workflows/jet_coinlist.yml
+++ b/.github/workflows/jet_coinlist.yml
@@ -39,7 +39,12 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+        
+      #Run Detekt
+      - name: Run Unit Tests
+        run: ./gradlew detekt
 
+      #Run unit tests
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
         
