--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,11 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
-        classpath("org.jlleitschuh.gradle:ktlint-gradle:10.2.0")
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.19.0-RC2"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.2.0"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
